# global-enterprise-operating-system

./: .env.example  Dockerfile  Makefile  PRODUCTION_V2.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci-cd.yml
Centers/Intel/LuMamba/: README.md  behaviors.md  role.md
Centers/Intel/LuMamba/qa/: escalation_rules.md  output_standards.md  qa_checklist.md
Centers/Intel/LuMamba/skills/: audience_segmentation.md  campaign_strategy.md  compliance_prescreening.md  content_creation.md  performance_reporting.md
Centers/Intel/LuMamba/workflows/: advisor_outreach.md  campaign_launch.md  content_review.md  reporting_digest.md
Centers/creator_models/financial/finserv_marketing_agent/: behaviors.md  role.md
Centers/creator_models/financial/finserv_marketing_agent/qa/: brand_consistency.md  compliance_integrity.md  output_quality.md  qa_framework.md
Centers/intelligence/lumamba/: GEOS-LuMamba-Architecture.html  README.md  lumamba-skill-labs.md
agents/slackbot/: slackbot_capabilities.json  slackbot_routing_rules.json
geos/: __init__.py  config.py  main.py
geos/agents/slackbot/: slackbot_event_handlers.json
geos/observability/: __init__.py  logging.py
geos/routers/: __init__.py  agents.py  health.py  plugins.py
intelligence/: mission
intelligence/routing/: agent_routing_table.json
intelligence/taskgraph/: taskgraph.schema.json
intelligence/taskgraph/instances/: tg_onboarding_001.json
tests/: __init__.py  conftest.py  test_agents.py  test_health.py
(+8 files in other folders)
