[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[[project]
name = "geos"
version = "2.0.0"
description = "GEOS: Global Enterprise Operating System"
authors = [{name = "Aaron Jobson", email = "aaron@jobson.dev"}]
requires-python = ">=3.10"
dependencies = [
    # ... your other deps ...
    "logging-json>=0.6.0",   # ← fixed here
]


[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-v --tb=short --cov=geos --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
